# meet

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  Procfile  README.md  UPGRADE.md  compose.yml  index.yaml  meet-0.0.10.tgz  meet-0.0.11-debug.tgz  meet-0.0.11.tgz  meet-0.0.12.tgz  meet-0.0.13-beta.1.tgz  meet-0.0.13.tgz  meet-0.0.14.tgz  meet-0.0.15.tgz  meet-0.0.16.tgz  meet-0.0.17.tgz  meet-0.0.18.tgz  meet-0.0.19.tgz  meet-0.0.20.tgz  meet-0.0.21.tgz  meet-0.0.22.tgz  meet-0.0.23.tgz  meet-0.0.24.tgz  meet-0.0.25.tgz  meet-0.0.26.tgz  meet-0.0.27.tgz  meet-0.0.4.tgz  meet-0.0.5.tgz  meet-0.0.6.tgz  meet-0.0.7.tgz  meet-0.0.8.tgz  meet-0.0.9.tgz  publiccode.yml  renovate.json  requirements.txt  (+2 more)
.github/workflows/: build-frontend.yml  crowdin-download.yml  docker-hub.yml  meet.yml  playwright.yml  registry.yml  release-helm-chart.yaml  security.yaml
deploy/paas/: servers.conf.erb
docker/auth/: realm.json
docker/dinum-frontend/: Dockerfile
docker/dinum-frontend/nginx/: default.conf  dinum.conf
docker/files/production/: default.conf.template
docker/janus/: Dockerfile
docker/janus/conf/: janus.jcfg  janus.plugin.sip.jcfg  janus.transport.http.jcfg  nginx.conf
docker/janus/web/: index.html
docker/livekit/: Dockerfile
docker/livekit/config/: livekit-server.yaml
docker/resource-server/: compose.yml
docker/twake-frontend/: Dockerfile  twake-styles.css
docker/twake-frontend/styles/: cozy-ui.utils.min.css
docs/: README.md  developping_locally.md  faq.md  flow.excalidraw  flow.md  generate-secrets.sh  index.md  install.sh  installation.md  openapi.yaml  resource_server.yaml  theming.md
docs/contributing/: backend.md  frontend.md  livekit-integration.md  local-dev.md  pull-requests.md  repo-structure.md  testing.md
docs/examples/compose/: compose.yaml
docs/examples/helm/: meet.values.yaml
docs/examples/installation/: compose.md
docs/examples/keycloak/: compose.yml  docker-compose.override.yml.nginx  docker-compose.override.yml.traefik  keycloak-realm.json
docs/examples/livekit/: server.yaml
docs/examples/meet/: compose.yml  docker-compose.override.yml.nginx  docker-compose.override.yml.traefik  livekit-server.yaml  nginx-routing.conf
docs/examples/minio/: .env.example  compose.yml
docs/examples/nginx-proxy/: .env.example  compose.yml
docs/examples/traefik/: compose.yml
docs/features/: authentication.md  calendar_integrations.md  recording.md  signaling.md  subtitles.md  summarization.md  telephony.md  transcription.md
docs/installation/: README.md  compose.md  kubernetes.md  scalingo.md
docs/overview/: architecture.md  changelog.md  feature-matrix.md  key-concepts.md  what-is-meet.md
docs/reference/: api.md  env-variables.md  external-api-delegated.md  external-api-resource-server.md  networking.md  openapi.yaml  security.md  troubleshooting.md
docs/self-hosting/: index.md  scalingo.md
docs/self-hosting/compose/: deployment-guide.md  nginx.md  prerequisites.md  quick-start.md  traefik.md
docs/self-hosting/configuration/: firewall.md  livekit.md  recording.md  sso.md  telephony.md  theming.md  transcription.md  turn.md  upgrade.md
docs/self-hosting/kubernetes/: helm.md  prerequisites.md
docs/superpowers/specs/: 2026-03-20-recording-delegate-design.md
docs/user/: accessibility.md  features-controls.md  getting-started.md  keyboard-shortcuts.md  recording.md  settings.md  transcription.md
env.d/development/: common.dist  kube-secret.dist  metadata_collector.dist  multi_user_transcriber.dist  summary.dist
env.d/production.dist/: backend  common  hosts  kc_postgresql  keycloak  postgresql
nix/: module.nix  overlay.nix
src/addins/outlook-addin/: manifest.xml  package-lock.json  package.json  webpack.config.js
src/addons/outlook/: manifest.xml  package-lock.json  package.json  webpack.config.js
src/addons/thunderbird/: package-lock.json  package.json  web-ext-config.cjs
src/agents/: .dockerignore  Dockerfile  agent.py  exceptions.py  metadata-extracter.py  metadata-extractor.py  metadata_collector.py  metadata_extractor.py  multi-user-transcriber.py  multi_user_transcriber.py  observability.py  pyproject.toml  tasks.py  voxtral_vllm_stt.py
src/backend/: pyproject.toml
src/backend/core/: admin.py  analytics.py  audit.py  audit_meet.py  enums.py  factories.py  fields.py  models.py  urls.py  utils.py
src/backend/meet/: settings.py  urls.py
src/frontend/: .gitignore  Dockerfile  README.md  default.conf  eslint.config.js  index.html  package-lock.json  package.json  panda.config.ts  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vite.plugin.config.ts
src/frontend/@types/: window.d.ts  (+2 more)
src/helm/: helmfile.yaml  helmfile.yaml.gotmpl
src/mail/: package-lock.json  package.json
src/nginx/: servers.conf.erb
src/sdk/: package-lock.json  package.json
src/summary/: Dockerfile  README.md  compose.yaml  pyproject.toml
src/summary/summary/: main.py
src/summary/summary/api/: main.py
src/summary/summary/api/route/: tasks.py  tasks_v2.py
src/summary/summary/core/: analytics.py  celery_app.py  celery_signals.py  celery_summarize_worker.py  celery_worker.py  config.py  docs_service.py  file_service.py  llm_service.py  models.py  observability.py  prompt.py  security.py  shared_models.py  transcript_formatter.py  types.py  user_assign.py  webhook_service.py
src/summary/summary/core/locales/: __init__.py  de.py  en.py  fr.py  nl.py  strings.py
src/summary/tests/: __init__.py  conftest.py
src/summary/tests/api/: __init__.py  test_api_health.py  test_api_tasks.py  test_api_tasks_v2.py
src/summary/tests/assets/: audio-sample-android-chrome.webm  audio-sample-android.m4a  audio-sample-chromium.webm  audio-sample-ios-browser.webm  audio-sample-ios.m4a  audio-sample-mac-os-safari.webm
src/summary/tests/integration/: __init__.py  conftest.py  test_api_health.py  test_api_tasks.py
src/summary/tests/models/: test_whisper_x_response.py
src/summary/tests/unit/: __init__.py  conftest.py  test_celery_worker.py  test_file_service.py  test_user_assign.py
(+969 files in other folders)
