
[project]
name = "summary"
version = "1.21.0"
dependencies = [
    "fastapi[standard]>=0.105.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "celery==5.6.3",
    "redis==5.2.1",
    "minio==7.2.20",
    "openai==2.44.0",
    "posthog==7.20.5",
    "requests==2.34.2",
    "sentry-sdk[fastapi, celery]==2.63.0",
    "langfuse==4.11.0"
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.19",
    "pytest==9.1.1",
    "responses>=0.25.8",
]

[tool.pytest.ini_options]
markers = [
    "api: Test the API",
]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "D",  # pydocstyle
    "E",  # pycodestyle error
    "F",  # Pyflakes
    "I",  # Isort
    "ISC",  # flake8-implicit-str-concat
    "PLC",  # Pylint Convention
    "PLE",  # Pylint Error
    "PLR",  # Pylint Refactor
    "PLW",  # Pylint Warning
    "RUF100",  # Ruff unused-noqa
    "S",  # flake8-bandit
    "T20", # flake8-print
    "W",  # pycodestyle warning
]
ignore= ["PLR2004"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101", # use of assert
]

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings.
convention = "google"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
  "fastapi.Depends",
  "fastapi.params.Depends",
  "fastapi.params.Query",
  "fastapi.Query",
]
